# UniNet

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  tmatrix.py
.github/workflows/: test.yml
Anomaly detection/: Data_processing_one_by_one.ipynb
Task1_Anomaly detection/: Anomaly detection.ipynb  Head_for_autoencoder.ipynb
Task2_Attack_identification/Attack_identification/: Attention_based_model.ipynb  GRU-T2.ipynb  LSTM-T2.ipynb
Task3_IoT_devices_fingerprinting/IoT devices fingerprinting/: Attention_based_model.ipynb  Baseline_LSTM.ipynb  IoT-fingerprinting.ipynb  draw results.ipynb  manit-processing.ipynb
Task4/: WFP-UniNet.py
Task4-Website-fingerprinting/: Transformer.py  WFP-Data-processing.py  WFP-LSTM.py  WFP-UniNet.py
configs/: tmatrix-paper.yaml  tmatrix-smoke.yaml
configs/tasks/: task1_anomaly.json  task2_attack.json  task3_iot.json  task4_website.json
data/examples/: flows.csv  packets.csv
data/smoke/: benign_browse.pcap  dns_burst.pcap  manifest.json  syn_scan.pcap  tmatrix-smoke.json  tokenizer.json
docs/: data.md  input_formats.md  reproducibility.md  tasks.md  tmatrix.md
legacy/: README.md
legacy/task1_notebooks/: Attention_based_model.ipynb  DL-baselines.ipynb  (+1 more)
scripts/: generate_smoke_data.py  generate_task_smoke_data.py
tasks/: task1_anomaly_detection.py  task2_attack_identification.py  task3_iot_device_identification.py  task4_website_fingerprinting.py
tests/: test_cli.py  test_model.py  test_pcap.py  test_standardize.py  test_tasks.py  test_tmatrix.py  test_tokenizer.py
(+19 files in other folders)
