[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uninet-security"
version = "0.2.0"
description = "UniNet multi-input T-Matrix standardization and four network-security task pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Binghui Wu"}]
keywords = ["network-security", "pcap", "traffic-analysis", "transformer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
model = ["torch>=2.1"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
uninet = "uninet.cli:main"
tmatrix = "uninet.standardize:main"

[project.urls]
Paper = "https://doi.org/10.1109/TCCN.2025.3585170"
Repository = "https://github.com/Binghui99/UniNet"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
